# redshift-plasmoid

./: CMakeLists.txt  Doxyfile  README  README.md  TODO  install.sh  metadata.desktop  redshift.kcfg  redshiftsettings.kcfgc
applet/: CMakeLists.txt  activities.ui  plasma-applet-redshift.desktop  redshift.ui  redshiftConfig.ui  redshiftapplet.cpp  redshiftapplet.h  redshiftosdwidget.cpp  redshiftosdwidget.h
contents/code/: cfgdialog.py  main.py  plasmaxfluxcfg.py
contents/config/: main.xml
contents/ui/: config.ui
dataengine/: CMakeLists.txt  plasma-dataengine-redshift.desktop  redshift.kcfg  redshift.operations  redshiftcontainer.cpp  redshiftcontainer.h  redshiftcontroller.cpp  redshiftcontroller.h  redshiftengine.cpp  redshiftengine.h  redshiftjob.cpp  redshiftjob.h  redshiftservice.cpp  redshiftservice.h
icons/: CMakeLists.txt  hi-app-redshift-status-off.svgz  hi-app-redshift-status-on.svgz  hi-app-redshift.svgz  hisc-app-redshift-status-manual.svgz  hisc-app-redshift-status-off.svgz  sc-apps-redshift.svgz
legacy/redshift/: README  metadata.desktop
legacy/redshift/contents/ui/: config.ui
po/: CMakeLists.txt  README  cs.po  de.po  es.po  fr.po  it.po  plasma_applet_redshift.pot
python-applet-legacy/contents/config/: main.xml
redshiftAutostartEnabler/: CMakeLists.txt  redshiftautostart.cpp  redshiftenabler.cpp  redshiftenabler.h
signalEmitter/: RedshiftAutostart.desktop  redshiftautostart.cpp  redshiftenabler.cpp  redshiftenabler.h
src/: CMakeLists.txt  redshift.kcfg  redshiftsettings.kcfgc
src/applet/: .CMakeLists.txt.kate-swp  CMakeLists.txt  activities.ui  plasma-applet-redshift.desktop  redshift.ui  redshiftapplet.cpp  redshiftapplet.h  redshiftosdwidget.cpp  redshiftosdwidget.h
src/applet/package/: metadata.desktop
src/applet/package/contents/config/: config.qml  main.xml
src/applet/package/contents/ui/: CompactRepresentation.qml  Configurate.qml  FullRepresentation.qml  main.qml
src/applet/package/contents/ui/config/: ActivityConfigItem.qml  ConfigActivities.qml  ConfigGeneral.qml  ConfigRedshiftAdvanced.qml  ConfigRedshiftBasic.qml
src/applet/package/contents/ui/icons/: redshift-status-on.svgz
src/applet/plugin/: qmldir  redshift.cpp  redshift.h  redshiftplugin.cpp  redshiftplugin.h
src/dataengine/: CMakeLists.txt  plasma-dataengine-redshift.desktop  redshiftcontainer.cpp  redshiftcontainer.h  redshiftcontroller.cpp  redshiftcontroller.h  redshiftengine.cpp  redshiftengine.h  redshiftjob.cpp  redshiftjob.h  redshiftservice.cpp  redshiftservice.h
src/redshiftAutostartEnabler/: CMakeLists.txt  RedshiftAutostart.desktop  redshiftautostart.cpp  redshiftenabler.cpp  redshiftenabler.h
